Toying with css grid

--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Test Calendar</title>
+    <link rel="stylesheet" type="text/css" href="css/calendar-grid.css">
 </head>
 <body>
-    
+    <div class="calendar">
+        <h3>February</h3>
+        <div class="days">
+            <p>S<span>unday</span></p>            
+            <p>M<span>onday</span></p>            
+            <p>T<span>uesday</span></p>            
+            <p>W<span>ednesday</span></p>            
+            <p>T<span>hursday</span></p>            
+            <p>F<span>riday</span></p>            
+            <p>S<span>aturday</span></p>            
+        </div>
+        <div class="month">
+            <div class="fill-start">Here is some special information that fills the start of the grid</div>
+            <div class='first-day-of-month'></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>            
+        </div>
+    </div>    
 </body>
 </html>
