--- a/index.html
+++ b/index.html
@@ -21,34 +21,37 @@
         </div>
         <div class="month">
             <div class="fill-start">Here is some special information that fills the start of the grid</div>
-            <div class='first-day-of-month'></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>            
+            <div class='first-day-of-month'><span class="day">1</span></div>
+            <div><span class="day">2</span></div>
+            <div><span class="day">3</span></div>
+            <div><span class="day">4</span></div>
+            <div><span class="day">5</span></div>
+            <div><span class="day">6</span></div>
+            <div><span class="day">7</span></div>
+            <div><span class="day">8</span></div>
+            <div><span class="day">9</span></div>
+            <div><span class="day">10</span></div>
+            <div><span class="day">11</span></div>
+            <div><span class="day">12</span></div>
+            <div><span class="day">13</span></div>
+            <div><span class="day">14</span></div>
+            <div><span class="day">15</span></div>
+            <div><span class="day">16</span></div>
+            <div><span class="day">17</span></div>
+            <div><span class="day">18</span></div>
+            <div><span class="day">19</span></div>
+            <div><span class="day">20</span></div>
+            <div><span class="day">21</span></div>
+            <div><span class="day">22</span></div>
+            <div><span class="day">23</span></div>
+            <div><span class="day">24</span></div>
+            <div><span class="day">25</span></div>
+            <div><span class="day">26</span></div>
+            <div><span class="day">27</span></div>            
+            <div><span class="day">28</span></div>            
+            <div><span class="day">29</span></div>            
+            <div><span class="day">30</span></div>            
+            <div><span class="day">31</span></div>            
         </div>
     </div>    
 </body>
