Updates to Maintain Aspect Ratio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,52 +8,150 @@
     <title>Test Calendar</title>
     <link rel="stylesheet" type="text/css" href="css/calendar-grid.css">
 </head>
+
 <body>
     <div class="calendar">
         <h3>March</h3>
         <div class="days">
-            <p>S<span>unday</span></p>            
-            <p>M<span>onday</span></p>            
-            <p>T<span>uesday</span></p>            
-            <p>W<span>ednesday</span></p>            
-            <p>T<span>hursday</span></p>            
-            <p>F<span>riday</span></p>            
-            <p>S<span>aturday</span></p>            
+            <p>S<span>unday</span></p>
+            <p>M<span>onday</span></p>
+            <p>T<span>uesday</span></p>
+            <p>W<span>ednesday</span></p>
+            <p>T<span>hursday</span></p>
+            <p>F<span>riday</span></p>
+            <p>S<span>aturday</span></p>
         </div>
         <div class="month">
-            <div class="fill-start">Here is some special information that fills the start of the grid</div>
-            <div class='first-day-of-month'><span class="day">1</span></div>
-            <div><span class="day">2</span></div>
-            <div><span class="day">3</span></div>
-            <div><span class="day">4</span></div>
-            <div><span class="day">5</span></div>
-            <div><span class="day">6</span></div>
-            <div><span class="day">7</span></div>
-            <div><span class="day">8</span></div>
-            <div><span class="day">9</span></div>
-            <div><span class="day">10</span></div>
-            <div><span class="day">11</span></div>
-            <div><span class="day">12</span></div>
-            <div><span class="day">13</span></div>
-            <div><span class="day">14</span></div>
-            <div><span class="day">15</span></div>
-            <div><span class="day">16</span></div>
-            <div><span class="day">17</span></div>
-            <div><span class="day">18</span></div>
-            <div><span class="day">19</span></div>
-            <div><span class="day">20</span></div>
-            <div><span class="day">21</span></div>
-            <div><span class="day">22</span></div>
-            <div><span class="day">23</span></div>
-            <div><span class="day">24</span></div>
-            <div><span class="day">25</span></div>
-            <div><span class="day">26</span></div>
-            <div><span class="day">27</span></div>            
-            <div><span class="day">28</span></div>            
-            <div><span class="day">29</span></div>            
-            <div><span class="day">30</span></div>            
-            <div><span class="day">31</span></div>            
+            <div class="fill-start">
+                <div>Here is some special information that fills the start of the grid, it might
+                    have to overflow which gives it an inner scroll bar but that's unlikely, just incase.</div>
+            </div>
+            <div class='first-day-of-month'>
+                <div class="day">1<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">2<div class='content'>this is what is happening today</div>
+                </div>
+            </div>
+            <div>
+                <div class="day">3<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">4<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">5<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">6<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">7<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">8<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">9<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">10<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">11<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">12<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">13<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">14<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">15<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">16<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">17<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">18<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">19<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">20<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">21<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">22<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">23<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">24<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">25<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">26<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">27<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">28<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">29<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">30<div class='content'></div>
+                </div>
+            </div>
+            <div>
+                <div class="day">31<div class='content'></div>
+                </div>
+            </div>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
